--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Marketplace App</title>
-  <h1>Hardwarestore</h1>
-  <p>Tools and hardware</p>
-  </head>
+    </head>
+      <link rel="stylesheet" href="style.css">
+    </head>
 
+          <title>Marketplace App</title>
+          <h1>Hardwarestore</h1>
+    <p>Tools and hardware</p>
+  </head>
 <body>
   <main>
     <nav>
       </nav>
-    <section id="products">
+          <section id="products">
       <div class="product1">
         <h3>Hammer</h3>
         <img src="https://via.placeholder.com/600x400" alt="Hammer image">
@@ -37,7 +39,7 @@
           <li>Rating: 9</li>
         </ul>
 		<div class="email-field">
-  <label for="email">Email:</label>
+      <label for="email">Email:</label>
   <input type="email" id="email" name="email" placeholder=mikael@davidsson.se>
 </div>
 <button>View Details</button>
